feat: Implement initial Vue.js frontend and Spring Boot backend with authentication.